<resources>
    <string name="app_name">Rent-A-Savari</string>
    <string name="carname">Mahindra KUV 100</string>
    <string name="carseat">5</string>
    <string name="smallpackage">Rs 2250</string>
    <string name="mediumpackage">Rs 5550</string>
    <string name="highpackage">Rs 9500</string>
    <string name="carimage">CarImage</string>
    <string name="btn_find_car">Find Car</string>
    <string name="btnfilter">Filter</string>
    <string name="starttime"> --------- --:--</string>
    <string name="starticoncal">starticoncal</string>
    <string name="select_pickup_time">Trip Start</string>
    <string name="select_drop_time">Trip End</string>
    <string name="enddate">---- -- ----</string>
    <string name="startdate">---- -- ----</string>
    <string name="endtime">--------- --:--</string>
    <string name="endcalicon">endiconcal</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="driving_licence_photo_front_txt">Driving Licence Photo (Front)</string>
    <string name="driving_licence_photo_back_txt">Driving Licence Photo (Back)</string>
    <string name="address_proof_photo_front_txt">Address Proof Photo (Front)</string>
    <string name="address_proof_photo_back_txt">Address Proof Photo (Back)</string>
    <string name="capture_address_proof_back">TODO</string>
    <string name="address_proof_back">TODO</string>
    <string name="capture_address_proof_front">TODO</string>
    <string name="address_proof_front">TODO</string>
    <string name="capture_licence_back">TODO</string>
    <string name="licence_back">TODO</string>
    <string name="capture_licence_front">TODO</string>
    <string name="licence_front">TODO</string>
    <string name="continuebtn">Continue</string>
    <string name="title_activity_email_vertify">EmailVertify</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="car_photos">Car Photos</string>
    <string name="select_booking_id">Select Booking ID</string>
    <string name="front_side">Front Side</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="back_side">Back Side</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="right_side">Right Side</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="left_side">Left Side</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="speedometer">Speedometer</string>
    <string name="todo10">TODO</string>
    <string name="carseattxt">Seater</string>
    <string name="smallpackagetxt">150 KMs</string>
    <string name="mediumpackagetxt">350 KMs</string>
    <string name="highpackagetxt">600 KMs</string>
    <string name="carfueltypetxt">Petrol</string>
    <string name="cartransmissiontype">Mannual</string>

</resources>