<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcircle"
    tools:context=".UploadCarImages">
    <TextView
        android:id="@+id/carphotostxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DC4433"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/car_photos"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="12dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carphotostxt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/booking_id_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_booking_id"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/layoutbg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/car_front_txt"
                    app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />

                <TextView
                    android:id="@+id/car_front_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="2dp"
                    android:text="@string/front_side"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/car_front"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/booking_id_dropdown" />

                <ImageView
                    android:id="@+id/car_front"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:background="@drawable/layoutbg"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@id/car_back_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_front_txt"
                    app:srcCompat="@drawable/capture_image"
                    android:contentDescription="@string/todo1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/capture_car_front"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/car_front"
                    app:layout_constraintEnd_toEndOf="@+id/car_front"
                    app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                    android:contentDescription="@string/todo1" />

                <TextView
                    android:id="@+id/car_back_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="2dp"
                    android:text="@string/back_side"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/car_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_front" />

                <ImageView
                    android:id="@+id/car_back"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:background="@drawable/layoutbg"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@id/car_right_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_back_txt"
                    app:srcCompat="@drawable/capture_image"
                    android:contentDescription="@string/todo2" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/capture_car_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/car_back"
                    app:layout_constraintEnd_toEndOf="@+id/car_back"
                    app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                    android:contentDescription="@string/todo3" />

                <TextView
                    android:id="@+id/car_right_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="2dp"
                    android:text="@string/right_side"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/car_right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_back" />

                <ImageView
                    android:id="@+id/car_right"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:background="@drawable/layoutbg"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@id/car_left_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_right_txt"
                    app:srcCompat="@drawable/capture_image"
                    android:contentDescription="@string/todo4" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/capture_car_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/car_right"
                    app:layout_constraintEnd_toEndOf="@+id/car_right"
                    app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                    android:contentDescription="@string/todo5" />

                <TextView
                    android:id="@+id/car_left_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="2dp"
                    android:text="@string/left_side"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/car_left"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_right" />

                <ImageView
                    android:id="@+id/car_left"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:background="@drawable/layoutbg"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@id/car_speedometer_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_left_txt"
                    app:srcCompat="@drawable/capture_image"
                    android:contentDescription="@string/todo6" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/capture_car_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/car_left"
                    app:layout_constraintEnd_toEndOf="@+id/car_left"
                    app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                    android:contentDescription="@string/todo7" />

                <TextView
                    android:id="@+id/car_speedometer_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="2dp"
                    android:text="@string/speedometer"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_left" />

                <ImageView
                    android:id="@+id/car_speedometer"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:background="@drawable/layoutbg"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_speedometer_txt"
                    app:srcCompat="@drawable/capture_image"
                    android:contentDescription="@string/todo8" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/capture_car_speedometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/car_speedometer"
                    app:layout_constraintEnd_toEndOf="@+id/car_speedometer"
                    app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                    android:contentDescription="@string/todo9" />

                <Button
                    android:id="@+id/continuebtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btnshape"
                    android:fontFamily="@font/poppins"
                    android:text="@string/continuebtn"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_speedometer" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>